// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thread actions should add label 1 to threads 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: true,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: false,
    labels: Immutable.Set [
      7,
      3,
      10,
    ],
  },
  Immutable.Map {
    participants: "Pedro Iniguez <pedroi@criptext.com>, Gianni Carlo <giannic@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#ed290b",
    preview: "Hello!",
    hasOpenAttachments: false,
    subject: "Hello gaumala!",
    totalAttachments: 4,
    letters: "PI",
    header: "Pedro, Gianni",
    date: "dic. 10",
    timesOpened: 0,
    unread: true,
    status: 1,
    lastEmailDate: 1512915941000,
    emails: Immutable.List [
      65,
      8,
      9,
      14,
    ],
    secure: false,
    id: 63542,
    selected: false,
    labels: Immutable.Set [
      10,
    ],
  },
]
`;

exports[`thread actions should add label Starred 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: true,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: false,
    labels: Immutable.Set [
      7,
      3,
      10,
      1,
    ],
  },
]
`;

exports[`thread actions should add threads to state 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: true,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: false,
    labels: Immutable.Set [
      7,
      3,
      10,
    ],
  },
  Immutable.Map {
    participants: "Pedro Iniguez <pedroi@criptext.com>, Gianni Carlo <giannic@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#ed290b",
    preview: "Hello!",
    hasOpenAttachments: false,
    subject: "Hello gaumala!",
    totalAttachments: 4,
    letters: "PI",
    header: "Pedro, Gianni",
    date: "dic. 10",
    timesOpened: 0,
    unread: true,
    status: 1,
    lastEmailDate: 1512915941000,
    emails: Immutable.List [
      65,
      8,
      9,
      14,
    ],
    secure: false,
    id: 63542,
    selected: false,
    labels: Immutable.Set [
      10,
    ],
  },
]
`;

exports[`thread actions should remove label Starred 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: true,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: false,
    labels: Immutable.Set [
      7,
      3,
      10,
    ],
  },
]
`;

exports[`thread actions should set all threads as not selected 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: true,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: false,
    labels: Immutable.Set [
      7,
      3,
      10,
    ],
  },
  Immutable.Map {
    participants: "Pedro Iniguez <pedroi@criptext.com>, Gianni Carlo <giannic@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#ed290b",
    preview: "Hello!",
    hasOpenAttachments: false,
    subject: "Hello gaumala!",
    totalAttachments: 4,
    letters: "PI",
    header: "Pedro, Gianni",
    date: "dic. 10",
    timesOpened: 0,
    unread: true,
    status: 1,
    lastEmailDate: 1512915941000,
    emails: Immutable.List [
      65,
      8,
      9,
      14,
    ],
    secure: false,
    id: 63542,
    selected: false,
    labels: Immutable.Set [
      10,
    ],
  },
]
`;

exports[`thread actions should set all threads as selected 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: true,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: true,
    labels: Immutable.Set [
      7,
      3,
      10,
    ],
  },
  Immutable.Map {
    participants: "Pedro Iniguez <pedroi@criptext.com>, Gianni Carlo <giannic@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#ed290b",
    preview: "Hello!",
    hasOpenAttachments: false,
    subject: "Hello gaumala!",
    totalAttachments: 4,
    letters: "PI",
    header: "Pedro, Gianni",
    date: "dic. 10",
    timesOpened: 0,
    unread: true,
    status: 1,
    lastEmailDate: 1512915941000,
    emails: Immutable.List [
      65,
      8,
      9,
      14,
    ],
    secure: false,
    id: 63542,
    selected: true,
    labels: Immutable.Set [
      10,
    ],
  },
]
`;

exports[`thread actions should set thread as read 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: false,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: false,
    labels: Immutable.Set [
      7,
      3,
      10,
    ],
  },
]
`;

exports[`thread actions should set thread as selected 1`] = `
Immutable.List [
  Immutable.Map {
    participants: "Criptext Info <no-reply@criptext.com>",
    lastEmailId: "<serial_key>",
    color: "#dbd230",
    timer: 1,
    preview: "Hello again!",
    hasOpenAttachments: false,
    subject: "Hello again gaumala!",
    totalAttachments: 1,
    letters: "CI",
    header: "Criptext Info",
    date: "ene. 10",
    timesOpened: 2,
    unread: true,
    status: 1,
    lastEmailDate: 1515601890000,
    emails: Immutable.List [
      1,
    ],
    secure: true,
    id: 532322,
    selected: true,
    labels: Immutable.Set [
      7,
      3,
      10,
    ],
  },
]
`;
